SPIXI/SPIXI/Assets/html/css/spixiui.css
/*
 * SPIXI User Interface Kit
 * https://ixian.io | https://spixi.io
 */

/* 
 * Content Sections:
 * 
 * Fonts
 * General
 * Placeholders
 * Toolbar
 * BalanceBar
 * OptionBar
 * DescriptionBar
 * TabBar
 * ToastBar
 * ErrorBar
 * CallBar
 * Buttons
 * TextField
 * Switch
 * Separators
 * ExpansionBox
 * Sidebar
 * ListItems
 * Chat
 * Modals
 * Misc
 * Colors
 * Animation
 */

/* Fonts */
@font-face {
    font-family: 'robotoregular';
    src: url('../fonts/Roboto-Regular.ttf') format('truetype');
    font-weight: normal;
    font-style: normal;
}
@font-face {
    font-family: 'robotobold';
    src: url('../fonts/Roboto-Bold.ttf') format('truetype');
    font-weight: normal;
    font-style: normal;
}


/* General */
body {
    font-family: 'robotoregular', sans-serif;
}

a:hover {
    text-decoration: none;
}

a:active {
    text-decoration: none;
}

#wrap {
   
    padding: 0 0;
    
    /* Prevent overscroll bounce  */
    -webkit-overflow-scrolling: touch;

    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    overflow: auto;
    
    background: #eef2f5;
}

img.emoji {
    max-width: 20pt;
    max-height: 20pt;
    object-fit: contain;
    margin: 0 .05em 0 .1em;
    vertical-align: -0.5em;
}

.lsx-emojipicker-appender {
    width: 220px;
    left: -58px;
    bottom: 25px;
    position: absolute !important;
}

.lsx-emojipicker-emoji span img.emoji {
    max-width: 25px;
    max-height: 25px;
}

.lsx-emojipicker-tabs {
    padding:0px !important;
}

.lsx-emojipicker-tabs img.emoji {
    width: 22px;
    height: 22px;
}

.lsx-emojipicker-container::after {
    left: 35px;
}

.break-word {
    word-wrap: break-word;
}

.spixi-center {
    text-align: center;
}

.spixi-italic {
    font-style: italic;
}

.spixi-bold {
    font-weight: bold;
}


/* Placeholders */
.spixi-holder-20 {
    width: 100%;
    height: 20px;
}
.spixi-holder-40 {
    width: 100%;
    height: 40px;
}

.spixi-holder-64 {
    width: 100%;
    height: 64px;
}

/* Toolbar */
.spixi-toolbar {
    width: 100%;
    height: 56px;
    position: fixed;
    z-index: 100;
    
    font-size: 16pt;
    background-image: linear-gradient(#951453, #c2185b);

   /* background: #771250;*/
    color: #FFF;  
}

.spixi-toolbar.extended {
    height: 128px;
}
.spixi-toolbar.extended-main {
    height: 166px;
}
.spixi-toolbar.shadow {
    box-shadow:0px 1px 2px #777;
}

.spixi-toolbar-row {
    padding-top: 10px;
    height: 56px;
}

.spixi-toolbar-row > div:nth-child(1) {
    position: absolute;
    z-index: 1;
    max-width: 50pt;
    -webkit-box-flex: unset;
    -ms-flex: auto;
    flex: auto;
    padding-left: 30px;
}

.spixi-toolbar-row > div:nth-child(2) {
    position: absolute;
    z-index: 0;
    max-width: 100%;
    -webkit-box-flex: unset;
    -ms-flex: auto;
    flex: auto;
    padding-left: 50pt;
    padding-right: 50pt;
    left: 0px;
    right: 0px;
    box-sizing: border-box;
}

.spixi-toolbar-row > div:nth-child(3) {
    position: absolute;
    z-index: 1;
    max-width: 50pt;
    -webkit-box-flex: unset;
    -ms-flex: auto;
    flex: auto;
    padding-right: 30px;
    text-align: right;
    right: 0px;
}

.spixi-toolbar-row.extended {
    padding-top: 12px;
    font-size: 14pt;
}
.spixi-toolbar-row-details {
    padding-right: 15pt;
    font-size:9pt;
}

.spixi-toolbar-holder {
    width: 100%;
    height: 56px;
}
.spixi-toolbar-holder.extended {
    height: 128px;
}
.spixi-toolbar-holder.extended-main {
    height: 166px;
}

.spixi-toolbar-line {
    width: 85%;
    height: 1px;
    background: rgba(0,0,0,0.2);
    margin: auto;
}

.spixi-toolbar-logo {
    background-image: url('../img/spixitoolbarlogo.png');
    width: 122px;
    height: 40px;
    background-size: 122px 40px;
    background-repeat: no-repeat;
    background-position: center;
    margin: auto;
}

.spixi-toolbar-option {
    box-sizing: border-box;
    font-size: 12pt;
    border: 1px solid white;
    border-radius: 10px;
    display: inline-block;
    padding: 3px 12px;
    position:absolute;
	right:10px;
}

.spixi-toolbar-option:hover
{
    background: rgba(11, 11, 11, 0.5);
}

.spixi-toolbar-chat-name {
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
}
.spixi-toolbar-chat-status {
    font-size: 11pt;
    margin-top: -4pt;
    font-weight: 200;
}

.spixi-toolbar-contact {
    width: 100%;
    font-size: 16pt;
    color: #FFF; 
    background-color: #25193c;
    padding: 0px 20px;
}

.spixi-toolbar-contact-name {
    margin-top: 24px;
    overflow: hidden;
    text-overflow: ellipsis;
}
.spixi-toolbar-contact-status {
    font-size: 9pt;
}

/* BalanceBar */
.spixi-balancebar {
    width: 100%;
    color: #fff;
    background-color: #25193c;
    box-shadow:0px 4px 10px #777;
    padding: 10px 0px;
}
.spixi-balancebar-label {
    font-size: 12pt;
    padding-left: 20px;
}
.spixi-balancebar-balance {
    font-size: 14pt;
    padding-left: 20px;
    padding-top: 8px;
}
.spixi-balancebar-line {
    margin-left: 20px;
    margin-top: 5px;
    width: 110px;
    height: 2px;
    background-color: #1692d9;
}
.spixi-balancebar-info {
    font-size: 8pt;
    font-style: italic;
    padding-left: 20px;
    padding-top: 4px;
}
.spixi-balancebar-quickscan {
    float: right;
    margin-top: -80px;
    margin-right: 20px;
}

/* OptionBar */
.spixi-optionbar {
    width: 100%;
    color: #fff;
    background: rgb(37, 25, 60);
}
.spixi-optionbar-contact-details {
    background: rgba(37, 25, 60, 0.5);
}
.spixi-optionbar-frame {
    width: 100%;
    margin: auto;
}
.spixi-optionbar-tab {
    text-align: center;
    font-size: 10pt;
    font-weight: bold;
    color: #FFFFFF;
    padding: 10px 0px;
}
.spixi-optionbar-tab:hover {
    background: #543c83;
}
.spixi-optionbar-tab:active {
    color: #dc236c;
    background: #25193c;
}
.spixi-optionbar-tab:active a {
    color: #dc236c;
}
.spixi-optionbar-tab a {
    color: #FFFFFF; 
}
.spixi-optionbar-tab-icon {
    font-size: 16pt;
    height: 26px;
}
/* ... */

